# tauri-plugin-tts

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  package.json
android/: build.gradle.kts
android/src/androidTest/java/: TtsInstrumentedTest.kt
android/src/main/java/: TtsPlugin.kt
android/src/test/java/: TtsUnitTest.kt
examples/tts-example/: README.md  package.json
examples/tts-example/src/: App.tsx
examples/tts-example/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
examples/tts-example/src-tauri/capabilities/: default.json
examples/tts-example/src-tauri/src/: lib.rs  main.rs
guest-js/: index.ts
guest-js/bindings/: PauseResumeResponse.ts  PreviewVoiceOptions.ts  QueueMode.ts  SpeakOptions.ts  Voice.ts
ios/: Package.swift  README.md
ios/Sources/: TtsPlugin.swift
ios/Tests/PluginTests/: TtsPluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: is_initialized.toml  is_speaking.toml  pause_speaking.toml  preview_voice.toml  resume_speaking.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
